style.css
@font-face {
    font-family: "gotham-medium";
    src: url(gotham-medium-regular.tff);
}

body {
    height: 100vh;
    margin: 0;
    padding: 0;
    font-family: "gotham-medium";
    color: white;
    /*background-color: #152238;*/
    background-color: rgb(6, 19, 41)
}

.main-page {
    display: flex;
    flex-direction: row;
    transition: 0.5s;
}

.side-bar {
    height: 100vh;
    width: 20vw;
    text-align: center;
    background-color: rgb(6, 19, 41);
}

.title {
    font-size: 25px;
    text-decoration: none;
    font-weight: normal;
    margin: 0;
    padding-top: 30px;
}

.right-side {
    height: 100vh;
    flex: 1;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
}

.top-bar {
    /*background-color: rgb(21, 34, 76);*/
    background-image: linear-gradient(#243147, #0b1928);
    height: 200px;
    padding-left: 35px;
    font-size: 65px;
    padding-bottom: 50px;
}

.nav-bar {
    display: flex;
    flex-direction: row;
    justify-content: right;
    padding-top: 20px;
    padding-right: 40px;
    padding-bottom: 60px;
}

.add-book {
    background-color: #243147;
    font-size: 20px;
    background: none;
	color: white;
	border: none;
    font-weight: bolder;
}

.add-book:hover {
    cursor: pointer;
    color: rgb(180,180,180);
}

.library {
    background-color: rgb(11, 25, 40);
    flex: 1;
    padding: 0 35px 35px 35px;
    display: flex;
    flex-direction: column;
}

.library .headers {
    display: flex;
    flex-direction: row;
    gap: 50px;
}

.library .book-area {
    margin-top: 40px;
    flex: 1;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 35px;
}

.book-holder {
    width: 200px;
    height: 240px;
    background-color: #243147;
    padding: 22px;
    color: white;
    text-align: center;
    word-wrap: break-word;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.book-holder .bottom-area {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.book-holder .bottom-area .read-circle {
    height: 10px;
    width: 10px;
    background-color: forestgreen;
    border-radius: 50%;
}

.book-holder .bottom-area .options-icon {
    display: flex;
    flex-direction: column;
    gap: 2px;
    cursor: pointer;
    padding-left: 5px;
}

.options-icon .small-dot {
    height: 4px;
    width: 4px;
    background-color: white;
    border-radius: 50%;
}

.options-menu {
    background-color: rgb(21, 34, 56);
    position: absolute;
    top: 40%;
    left: 50%;
    visibility: hidden;
    display: flex;
    flex-direction: column;
}

.options-menu.active {
    visibility: visible;
}

.options-menu.active .option {
    height: 30px;
    color: white;
    font-size: 20px;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 10px 20px;
    cursor: pointer;
}

.book {
    height: 200px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    word-wrap: break-word;
    text-align: center;
}

.book:hover {
    cursor: pointer;
}

.book.active {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
    gap: 15px;
    text-align: left;
    background-color: rgb(6, 19, 41);
}

.info-area {
    display: flex;
    flex-direction: column;
    gap: 7px;
    padding: 10px;
    pointer-events: none;
    user-select: none;
}

.options-area {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 10px;
    pointer-events: none;
    user-select: none;
}

.sub-heading {
    margin: 0;
    padding: 0;
    text-decoration: none;
    font-size: 24px;
    font-weight: bolder;
}

.sub-heading:hover {
    color: rgb(180,180,180);
    cursor: pointer;
}

.blur.active {
    filter: blur(15px);
    pointer-events: none;
    user-select: none;
}

.form-box {
    width: 650px;
    height: 650px;
    background-color: white;
    position: absolute;
    margin: 0;
    top: 40%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    color: black;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 20px 35px;
    visibility: hidden;
    opacity: 0;
    transition: 0.5s;
}

.form-box.active {
    top: 50%;
    visibility: visible;
    opacity: 1;
    transition: 0.5s;
}

.form-box .form-title {
    font-size: 35px;
    text-decoration: none;
    font-weight: normal;
    margin: 0;
}

.form-input {
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: space-between;
    font-size: 25px;
    gap: 30px;
}

.form-input .row {
    display: flex;
    flex-direction: row;
    
}

.form-input .row label {
    width: 30%;
}

.form-input .row input {
    flex: 1;
    height: 25px;
    font-size: 25px;
}

.form-box .buttons {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.cancel,
.submit {
    padding: 15px 20px;
    text-decoration: none;
    border: none;
    color: black;
    font-size: 20px;
}

.submit {
    background-color: rgb(30, 144, 255);
}

.submit:hover {
    background-color: rgb(10, 124, 235);
}

